# drdb

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  README.md  main.cc
src/: debug.h  error.rs  exception.h  kv.rs  main.rs  record.h  types.h
src/kv/: aggregate_iterator.cc  aggregate_iterator.h  encoder.cc  encoder.h  encoding.rs  file_reader.cc  file_reader.h  immutable_file.cc  immutable_file.h  immutable_store.cc  immutable_store.h  iter.rs  iterator.cc  iterator.h  mem_table.cc  mem_table.h  range.cc  range.h  record_reader.cc  record_reader.h  store.rs
